--- a/checkout.html
+++ b/checkout.html
@@ -367,24 +367,10 @@
                                             </label>
                                         </div>
                                         <div>
-                                            <input type="radio" id="option-2" name="payment-option" value="paypal" tabindex="0">
+                                            <input type="radio" id="option-2" name="payment-option" value="fpx" tabindex="0">
                                             <label for="option-2" class="checkout-option rounded text text--dark">
-                                                <i class="fab fa-paypal payment-icon"></i>
-                                                <span class="checkout-option-name">PayPal</span>
-                                            </label>
-                                        </div>
-                                        <div>
-                                            <input type="radio" id="option-3" name="payment-option" value="fpx" tabindex="0">
-                                            <label for="option-3" class="checkout-option rounded text text--dark">
                                                 <i class="fas fa-university payment-icon"></i>
-                                                <span class="checkout-option-name">FPX</span>
-                                            </label>
-                                        </div>
-                                        <div>
-                                            <input type="radio" id="option-4" name="payment-option" value="manual" tabindex="0">
-                                            <label for="option-4" class="checkout-option rounded text text--dark">
-                                                <i class="fas fa-wallet payment-icon"></i>
-                                                <span class="checkout-option-name">Manual Payment</span>
+                                                <span class="checkout-option-name">FPX (Bank Transfer)</span>
                                             </label>
                                         </div>
                                     </div>
