consolidating duplicate functions and pages

--- a/farm.html
+++ b/farm.html
@@ -634,7 +634,7 @@
                                                                     <div class="post_item_wrap">
                                                                         <div class="post_featured">
                                                                             <div class="post_thumb">
-                                                                                <a class="hover_icon hover_icon_link" href="single-product.html">
+                                                                                <a class="hover_icon hover_icon_link" href="single-product.php">
                                                                                     <img src="images/percorino romano.jpeg" class="attachment-shop_catalog size-shop_catalog" alt="" />
                                                                                 </a>
                                                                             </div>
@@ -646,7 +646,7 @@
                                                                                     <span class="woocommerce-Price-currencySymbol">&#36;</span>18.90
                                                                                 </span>
                                                                             </span>
-                                                                            <a rel="nofollow" href="single-product.html" data-quantity="1" data-product_id="471" data-product_sku="" class="button add_to_cart_button">Select options</a>
+                                                                            <a rel="nofollow" href="single-product.php" data-quantity="1" data-product_id="471" data-product_sku="" class="button add_to_cart_button">Select options</a>
                                                                         </div>
                                                                     </div>
                                                                 </li>
@@ -654,7 +654,7 @@
                                                                     <div class="post_item_wrap">
                                                                         <div class="post_featured">
                                                                             <div class="post_thumb">
-                                                                                <a class="hover_icon hover_icon_link" href="single-product.html">
+                                                                                <a class="hover_icon hover_icon_link" href="single-product.php">
                                                                                     <img src="images/JG10293-glass-milk-bottles_3.webp" class="attachment-shop_catalog size-shop_catalog" alt="" />
                                                                                 </a>
                                                                             </div>
@@ -666,7 +666,7 @@
                                                                                     <span class="woocommerce-Price-currencySymbol">&#36;</span>4.90
                                                                                 </span>
                                                                             </span>
-                                                                            <a rel="nofollow" href="single-product.html" data-quantity="1" data-product_id="458" data-product_sku="" class="button add_to_cart_button">Select options</a>
+                                                                            <a rel="nofollow" href="single-product.php" data-quantity="1" data-product_id="458" data-product_sku="" class="button add_to_cart_button">Select options</a>
                                                                         </div>
                                                                     </div>
                                                                 </li>
@@ -674,7 +674,7 @@
                                                                     <div class="post_item_wrap">
                                                                         <div class="post_featured">
                                                                             <div class="post_thumb">
-                                                                                <a class="hover_icon hover_icon_link" href="single-product.html">
+                                                                                <a class="hover_icon hover_icon_link" href="single-product.php">
                                                                                     <img src="images/images3.jpeg" class="attachment-shop_catalog size-shop_catalog" alt="" />
                                                                                 </a>
                                                                             </div>
@@ -686,7 +686,7 @@
                                                                                     <span class="woocommerce-Price-currencySymbol">&#36;</span>12.50
                                                                                 </span>
                                                                             </span>
-                                                                            <a rel="nofollow" href="single-product.html" data-quantity="1" data-product_id="448" data-product_sku="" class="button add_to_cart_button">Select options</a>
+                                                                            <a rel="nofollow" href="single-product.php" data-quantity="1" data-product_id="448" data-product_sku="" class="button add_to_cart_button">Select options</a>
                                                                         </div>
                                                                     </div>
                                                                 </li>
@@ -694,7 +694,7 @@
                                                                     <div class="post_item_wrap">
                                                                         <div class="post_featured">
                                                                             <div class="post_thumb">
-                                                                                <a class="hover_icon hover_icon_link" href="single-product.html">
+                                                                                <a class="hover_icon hover_icon_link" href="single-product.php">
                                                                                     <img src="images/images4.jpeg" class="attachment-shop_catalog size-shop_catalog" alt="" />
                                                                                 </a>
                                                                             </div>
@@ -706,7 +706,7 @@
                                                                                     <span class="woocommerce-Price-currencySymbol">&#36;</span>15.99
                                                                                 </span>
                                                                             </span>
-                                                                            <a rel="nofollow" href="single-product.html" data-quantity="1" data-product_id="438" data-product_sku="" class="button add_to_cart_button">Select options</a>
+                                                                            <a rel="nofollow" href="single-product.php" data-quantity="1" data-product_id="438" data-product_sku="" class="button add_to_cart_button">Select options</a>
                                                                         </div>
                                                                     </div>
                                                                 </li>
