--- a/about-2.html
+++ b/about-2.html
@@ -200,6 +200,7 @@
                 <div class="fresh-from-farm-overlay" style="animation: fadeInUp 1s ease-out 0.2s both;">
                     <h1 style="animation: fadeInUp 1s ease-out 0.4s both, glow 4s ease-in-out 1.4s infinite;">Fresh From The Farm</h1>
                     <div class="accent-line" style="animation: scaleAccent 0.8s ease-out 0.8s both;"></div>
+                    <p class="overlay-tagline" style="margin-top:10px;font-size:16px;font-weight:500;color:#fff;letter-spacing:.5px;animation: fadeInUp 1s ease-out 0.6s both;">From muddy boots to delicious bites.</p>
                 </div>
                 <!-- <div class="content_wrap">
                     <h1 class="page_title">About Us</h1>
