--- a/contacts.html
+++ b/contacts.html
@@ -594,7 +594,7 @@
                                                             <div class="form-container">
                                                                 <div class="form-header-new">
                                                                     <h2 class="form-title-new">Send us a Message</h2>
-                                                                    <p class="form-subtitle-new">We're here to help and answer any question you might have.</p>
+                                                                    <p class="form-subtitle-new">We're here to help.</p>
                                                                 </div>
 
                                                                 <form id="contact-form-new" class="modern-form" method="post" action="includes/sendmail.php">
