--- a/classic.html
+++ b/classic.html
@@ -176,14 +176,11 @@
         </div>
         <div class="top_panel_title top_panel_style_1 title_present breadcrumbs_present scheme_original">
             <div  class="bg_cust_4 top_panel_title_inner top_panel_inner_style_1 title_present_inner breadcrumbs_present_inner">
-                <!-- <div class="content_wrap">
-                    <h1 class="page_title">Blog</h1>
-                    <div class="breadcrumbs">
-                        <a class="breadcrumbs_item home" href="index.html">Home</a>
-                        <span class="breadcrumbs_delimiter"></span>
-                        <span class="breadcrumbs_item current">Blog</span>
-                    </div>
-                </div> -->
+                <div class="fresh-from-farm-overlay" style="animation: fadeInUp 1s ease-out 0.2s both;">
+                    <h1 style="animation: fadeInUp 1s ease-out 0.4s both, glow 4s ease-in-out 1.4s infinite;">Good News, Good Food</h1>
+                    <div class="accent-line" style="animation: scaleAccent 0.8s ease-out 0.8s both;"></div>
+                    <p class="overlay-tagline" style="margin-top:10px;font-size:16px;font-weight:500;color:#fff;letter-spacing:.5px;animation: fadeInUp 1s ease-out 0.6s both;">Announcements, events, and fresh ideas.</p>
+                </div>
             </div>
         </div>
         <div class="page_content_wrap page_paddings_yes">
